fix ui not show correct color on safari

--- a/packages/portal-pc/src/assets/styles/index.scss
+++ b/packages/portal-pc/src/assets/styles/index.scss
@@ -91,7 +91,7 @@ div:focus {
     top: 0;
     display: flex;
     align-items: center;
-    background-color: rgba(#fff, 0.1);
+    background-color: rgba(#111111, 0.1);
     backdrop-filter: blur(35px);
     z-index: 1;
 
